Add special case to handle "save to file then annotate it immediately after"

A lot of users are doing spectacle -b -o file.png --edit-existing file.png, and expecting this behavior.
We might as well support it.

BUG: 456673